update i3wm colors

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -303,34 +303,42 @@ exec_always $ns xrdb ~/.Xresources
 ########################################################
 
 # Colors from ~/.Xresources
-set_from_resource $background background
-set_from_resource $foreground foreground
-set_from_resource $color0  color0
-set_from_resource $color1  color1
-set_from_resource $color2  color2
-set_from_resource $color3  color3
-set_from_resource $color4  color4
-set_from_resource $color5  color5
-set_from_resource $color6  color6
-set_from_resource $color7  color7
-set_from_resource $color8  color8
-set_from_resource $color9  color9
-set_from_resource $color10 color10
-set_from_resource $color11 color11
-set_from_resource $color12 color12
-set_from_resource $color13 color13
-set_from_resource $color14 color14
-set_from_resource $color15 color15
+# set_from_resource $background background
+# set_from_resource $foreground foreground
+# set_from_resource $color0  color0
+# set_from_resource $color1  color1
+# set_from_resource $color2  color2
+# set_from_resource $color3  color3
+# set_from_resource $color4  color4
+# set_from_resource $color5  color5
+# set_from_resource $color6  color6
+# set_from_resource $color7  color7
+# set_from_resource $color8  color8
+# set_from_resource $color9  color9
+# set_from_resource $color10 color10
+# set_from_resource $color11 color11
+# set_from_resource $color12 color12
+# set_from_resource $color13 color13
+# set_from_resource $color14 color14
+# set_from_resource $color15 color15
 
-# colors
-# class                 border  background  content    	indic  	   child_border
-client.background	      $background
+# Colors
+set $bg 	          #81a1c1
+set $inactive-bg    #1f222d
+set $text           #ffffff
+set $inactive-text  #888888
+set $urgent-bg      #bf616a
+set $indic          #81a1c1
+set $inactive-indic #1f222d
 
-client.focused         	$color1 $color1	  	$background	$color1  $color1
-client.unfocused       	$color1	$background	$color1	  	$color0  $color0
-client.focused_inactive	$color1	$background	$color1	  	$color0  $color0
-client.urgent			      $color1	$background	$color1	  	$color1  $color8
-client.placeholder		  $color1	$background	$color1	  	$color1  $color8
+# class                 border        background    content    	    indic  	         child_border
+client.background	      $bg
+
+client.focused         	$bg           $bg	  	      $text	          $indic           $bg
+client.unfocused       	$inactive-bg	$inactive-bg	$inactive-text	$inactive-indic  $inactive-bg
+client.focused_inactive	$inactive-bg	$inactive-bg	$inactive-text	$inactive-indic  $inactive-bg
+client.urgent			      $urgent-bg  	$urgent-bg  	$inactive-text 	$inactive-indic  $inactive-bg
+client.placeholder		  $inactive-bg	$inactive-bg	$inactive-text 	$inactive-indic  $inactive-bg
 
 
 ########################################################
