--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -13,7 +13,7 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-[bar/rastibar]
+[bar/whatever]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 24
