add i3 catppuccin themes

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -40,9 +40,10 @@ set $right l
 ########################################################
 
 # Font
-font pango: SourceCodePro 8
+font pango: SourceCodePro 10
 
 # General settings
+title_align left
 floating_modifier $mod
 workspace_layout default
 workspace_auto_back_and_forth no
@@ -51,15 +52,15 @@ hide_edge_borders both
 focus_follows_mouse no
 
 # Border style <normal|1pixel|pixel xx|none|pixel>
-for_window [class="^.*"] border pixel 1
-new_window pixel 1
+for_window [class="^.*"] border pixel 2
+new_window pixel 2
 new_float none
 
 # Gaps settings
 gaps inner 5
 gaps outer 0
-smart_gaps on
-smart_borders on
+smart_gaps off
+smart_borders no_gaps
 
 
 ########################################################
@@ -71,7 +72,7 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+q kill
 
 # bindsym $mod+u border none
-# bindsym $mod+y border pixel 1
+# bindsym $mod+y border pixel 2
 # bindsym $mod+n border normal
 
 # Focus window
@@ -302,43 +303,43 @@ exec_always $ns xrdb ~/.Xresources
 # Colors
 ########################################################
 
-# Colors from ~/.Xresources
-# set_from_resource $background background
-# set_from_resource $foreground foreground
-# set_from_resource $color0  color0
-# set_from_resource $color1  color1
-# set_from_resource $color2  color2
-# set_from_resource $color3  color3
-# set_from_resource $color4  color4
-# set_from_resource $color5  color5
-# set_from_resource $color6  color6
-# set_from_resource $color7  color7
-# set_from_resource $color8  color8
-# set_from_resource $color9  color9
-# set_from_resource $color10 color10
-# set_from_resource $color11 color11
-# set_from_resource $color12 color12
-# set_from_resource $color13 color13
-# set_from_resource $color14 color14
-# set_from_resource $color15 color15
+# Theme: catppuccin mocha (https://github.com/catppuccin/i3)
+set $rosewater #f5e0dc
+set $flamingo  #f2cdcd
+set $pink      #f5c2e7
+set $mauve     #cba6f7
+set $red       #f38ba8
+set $maroon    #eba0ac
+set $peach     #fab387
+set $green     #a6e3a1
+set $teal      #94e2d5
+set $sky       #89dceb
+set $sapphire  #74c7ec
+set $blue      #89b4fa
+set $lavender  #b4befe
+set $text      #cdd6f4
+set $subtext1  #bac2de
+set $subtext0  #a6adc8
+set $overlay2  #9399b2
+set $overlay1  #7f849c
+set $overlay0  #6c7086
+set $surface2  #585b70
+set $surface1  #45475a
+set $surface0  #313244
+set $base      #1e1e2e
+set $mantle    #181825
+set $crust     #11111b
 
-# Colors
-set $bg 	          #81a1c1
-set $inactive-bg    #1f222d
-set $text           #ffffff
-set $inactive-text  #888888
-set $urgent-bg      #bf616a
-set $indic          #81a1c1
-set $inactive-indic #1f222d
+# Include theme colors (doesnt work with linked files)
+include themes/catppuccin-mocha
 
-# class                 border        background    content    	    indic  	         child_border
-client.background	      $bg
-
-client.focused         	$bg           $bg	  	      $text	          $indic           $bg
-client.unfocused       	$inactive-bg	$inactive-bg	$inactive-text	$inactive-indic  $inactive-bg
-client.focused_inactive	$inactive-bg	$inactive-bg	$inactive-text	$inactive-indic  $inactive-bg
-client.urgent			      $urgent-bg  	$urgent-bg  	$inactive-text 	$inactive-indic  $inactive-bg
-client.placeholder		  $inactive-bg	$inactive-bg	$inactive-text 	$inactive-indic  $inactive-bg
+# class                     border      bg      content   indicator    child_border
+client.focused              $blue       $blue   $text     $rosewater   $blue
+client.focused_inactive     $pink       $base   $text     $rosewater   $pink
+client.unfocused            $pink       $base   $text     $rosewater   $pink
+client.urgent               $peach      $base   $peach    $overlay0    $peach
+client.placeholder          $overlay0   $base   $text     $overlay0    $overlay0
+client.background           $base
 
 
 ########################################################
