--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -4,55 +4,51 @@
 ; All dotfiles can be found here: http://github.com/rastilization/dotfiles
 ; ==============================================================================
 
-[colors]
-background = ${xrdb:background:#08090c}
-background-alt = #444
-foreground = ${xrdb:foreground:#9cb9de}
-foreground-alt = #555
-primary = #ffb52a
-secondary = #e60053
-alert = #bd2c40
+
+; Include theme
+include-file = themes/catppuccin-mocha.ini
+
 
 [bar/whatever]
 ;monitor = ${env:MONITOR:HDMI-1}
-width = 100%
+bottom = false
+width = 2558
 height = 24
-;offset-x = 1%
-;offset-y = 1%
+override-redirect = true
+wm-name = i3
+wm-restack = i3
+offset-x = 1
+offset-y = 1
 radius = 0
-fixed-center = false
+fixed-center = true
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+background = ${colors.base}
+foreground = ${colors.blue}
 
 line-size = 3
-line-color = #f00
+line-color = ${colors.base}
 
-border-size = 0
-border-color = #00000000
+border-size = 2
+border-color = ${colors.blue}
 
 padding-left = 0
-padding-right = 2
+padding-right = 1
 
-module-margin-left = 1
-module-margin-right = 2
+module-margin-left = 0
+module-margin-right = 1
 
-font-0 = SourceCodePro:pixelsize=8:weight=bold;1
+font-0 = SourceCodePro:pixelsize=9:weight=bold;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
-font-3 = FontAwesome:size=10;0
-
+font-2 = siji:pixelsize=9;1
+font-3 = FontAwesome:size=9;1
 
 modules-left = i3
 modules-center = date
-modules-right = filesystem memory cpu wlan pulseaudio xkeyboard
+modules-right = filesystem memory cpu pulseaudio xkeyboard
 
-tray-position = right
+tray-position = none
 tray-padding = 2
 ;tray-background = #0063ff
-
-;wm-restack = bspwm
-;wm-restack = i3
 
 ;override-redirect = true
 
@@ -61,6 +57,7 @@ tray-padding = 2
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
 
 [module/xwindow]
 type = internal/xwindow
