--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -197,7 +197,7 @@ for_window [window_role="Preferences"] floating enable
 for_window [urgent=latest] focus
 
 # Default workspaces
-assign [class="Firefox"] $ws1
+assign [class="firefox"] $ws1
 assign [class="Atom"] $ws2
 assign [class="TelegramDesktop"] $ws0
 # assign [class="Vlc"] $ws7
